# src/main/resources/openapi.yml
@@ -78,7 +78,26 @@ paths:
           description: Invalid company supplied
         "404":
           description: User not found
-
+    delete:
+      tags:
+        - member
+      summary: delete member
+      operationId: deleteMember
+      parameters:
+        - name: id
+          description: member id
+          schema:
+            type: integer
+            format: int64
+          in: path
+          required: true
+      responses:
+        "200":
+          description: successful operation
+        "400":
+          description: Invalid company supplied
+        "404":
+          description: User not found
 
 #    get:
 #      tags:
